# flexisip-conference

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  flake.nix  sanitizer_ignore.txt  shell.nix
.gitlab-ci-files/: job-linux-archlinux.yml  job-linux-debian12.yml  job-linux-debian13.yml  job-linux-rocky8.yml  job-linux-rocky9.yml  job-linux-ubuntu-22-04.yml  job-linux-ubuntu-24-04.yml  job-linux-ubuntu-26-04.yml  job-linux.yml  job-macosx.yml  scripts.yml
.gitlab/merge_request_templates/: default.md
cmake/: Flexisip.cmake  LinphoneSDK.cmake  flexisip-conference-config.h.in
include/: gitversion.cmake  gitversion.h.in
nix/: base.nix  dependencies.nix
packaging/: CMakeLists.txt  description.txt
packaging/deb/: postinst.in
packaging/deb/plugins/: postinst.in
packaging/rpm/: README.md  post_install.spec.in  post_uninstall.spec.in
packaging/rpm/plugins/: post_install.spec.in
scripts/: CMakeLists.txt  flexisip-conference-logrotate  flexisip-conference.bash-completion  flexisip.service.in
src/: CMakeLists.txt  main.cc
src/conference/: conference-server.cc  conference-server.hh
src/main/: flexisip-conference.cc  flexisip-conference.hh
tester/tests/: CMakeLists.txt  main-tester.cc
tester/tests/conference/: codecs-tester.cc  conference-server-tester.cc  registration-subscription-tester.cc
tester/tests/eventlogs/writers/: flexi-stats-event-log-writer-tester.cc
tester/utils/: CMakeLists.txt  conference-builder.cc  conference-builder.hh
tester/utils/server/: test-conference-server.cc  test-conference-server.hh
